argocd/networking/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: vault-gateway
  namespace: istio-system
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    istio: ingressgateway  
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - vault-dev.psvoltaire.ca
    - vault-uat.psvoltaire.ca
    - vault-prod.psvoltaire.ca
